syntax = "proto3";

package objects;

import "MessageMetadatas.proto";

message UserLocationValue {
  uint32 userId = 1;
  double lat = 2;
  double long = 3;
}

message UserLocation {
  pmc.MessageMetadatas metas = 1;
  UserLocationValue value = 2;
}

message UserFence {
  uint32 userId = 1;
  string placeName = 2;
}